241. Debugging in VS Code

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-.vscode/*
-*vs*
+*.vscode/c_cpp_properties.json
+*.vscode/settings.json
+*.vscode/tasks.json
+
+*/*/.vscode/c_cpp_properties.json
+*/*/.vscode/settings.json
+*/*/.vscode/tasks.json
+
+*/*/*/.vscode/c_cpp_properties.json
+*/*/*/.vscode/settings.json
+*/*/*/.vscode/tasks.json
+
 *Debug*
 *.exe
 *.pdb
